Bug 701402 - Smart scrolling in mupdf-x11 changes behavior *and* breaks scrolling
Summary: Smart scrolling in mupdf-x11 changes behavior *and* breaks scrolling
Status: RESOLVED FIXED
Alias: None
Product: MuPDF
Classification: Unclassified
Component: mupdf (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: MuPDF bugs
URL:
Keywords:
: 701615 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-08-06 16:10 UTC by arthur.huillet+mupdf@free.fr
Modified: 2019-09-17 13:41 UTC (History)
2 users (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description arthur.huillet+mupdf@free.fr 2019-08-06 16:10:13 UTC
Hi,
smart scrolling was apparently implemented in mupdf-x11 1.16.1, and that regresses behavior from 1.16.0 in various ways.
sebras on IRC asked me to file a bug.

It used to be that pressing spacebar would move to the next page (like page down), and that is one thing I liked about mupdf-x11 that made me not want to use mupdf-gl. 

Issue 1)

If the window is height-limited by the 90% rule of mupdf (1080pixels on my 1920x1200 screen), pressing space will not scroll to the next page, but will very subtly scroll the page down a few pixels requiring two presses to go to the next page.
That's the most debatable issue, I guess, and it may be intended behavior for smart scrolling. But it's also a regression from previous releases, and it's not valuable on PDFs that almost-quite-fit in the height of the window, because smart scrolling then really only scrolls a few pixels (I shared an example PDF on IRC).

Issue 2)

Smart scrolling actually can't scroll to the last page, no matter how many times you press space. 

Issue 3)

Backspace no longer goes back to the previous page.

2 and 3 are major functional breakage which I hope you can fix.
1 I assume may be more contentious, but if you can't go back to previous behavior or fix smart scrolling so it doesn't do 5-pixel scrolls, it would be appreciated to have a config option to disable the feature altogether.

Thanks
Comment 2 Tor Andersson 2019-08-16 14:45:21 UTC
The following two commits should solve your largest grievances.

commit 606fcf8383943d7f986d6706f1cb67fbdab0e224
Author: Sebastian Rasmussen <sebras@gmail.com>
Date:   Tue Aug 6 18:09:16 2019 +0200

    Bug 701402: x11: Allow smart scroll to advance to last page of document.

commit 77c591b24ca641d6e28c9e4810b00f3602cb45fc
Author: Tor Andersson <tor.andersson@artifex.com>
Date:   Wed Aug 14 14:02:33 2019 +0200

    Bug 701402: Add 5% slop to smart scrolling.
    
    If the scroll would only take you 5% across the page, skip directly to
    the next page instead.
Comment 3 arthur.huillet+mupdf@free.fr 2019-08-16 18:27:41 UTC
Thanks. 
Would you please also restore backspace in mupdf-x11?
Comment 4 Sebastian Rasmussen 2019-09-17 13:41:33 UTC
*** Bug 701615 has been marked as a duplicate of this bug. ***