Bug 701402: x11: Allow smart scroll to advance to last page of document.